--- a/public_html/index.html
+++ b/public_html/index.html
@@ -16,32 +16,33 @@
       <div data-ct-ui-stage="1">
         <h2>When?</h2>
         <div data-ct-ui-hide-then>
-          <p><button type="button" data-ct-ui-stage-change="click">Now</button></p>
+          <p><button type="button" data-ct-ui-stage-change="click" data-ct-data-date="now">Now</button></p>
           <p><button type="button" data-ct-ui-show-target="then">Then</button></p>
         </div>
         <div data-ct-ui-show-then class="ui--removed">
           <p>
             <label><span class="ui--hidden">Time of day</span>
-              <select>
+              <select data-ct-data-date="time">
                 <option>--Select time of day--</option>
-                <option>Breakfast</option>
-                <option>Morning</option>
-                <option>Lunch</option>
-                <option>Afternoon</option>
-                <option>Dinner</option>
-                <option>Evening</option>
+                <option value="07:00">Breakfast</option>
+                <option value="10:00">Morning</option>
+                <option value="13:00">Lunch</option>
+                <option value="16:00">Afternoon</option>
+                <option value="19:00">Dinner</option>
+                <option value="21:00">Evening</option>
               </select>
             </label>
           </p>
           <p data-ct-ui-checked-hide-when>
-            <label>Today <input type="radio" data-ct-ui-stage-change="checked"/></label>
+            <label>Today <input type="radio" data-ct-ui-stage-change="checked"  data-ct-data-date="today"/></label>
             <label>Another day <input type="radio" data-ct-ui-show-checked="when"/></label>
           </p>
           <div data-ct-ui-checked-show-when class="ui--removed">
             <p>
               <label>Date
-                <input type="date" placeholder="dd/mm/yyyy" data-ct-ui-stage-change="complete" data-ct-form-default="today"/>
+                <input type="date" placeholder="yyyy-mm-dd" data-ct-ui-stage-change="complete" data-ct-form-default="today" data-ct-data-date="date"/>
               </label>
+              <button type="button">OK</button>
             </p>
           </div>
         </div>
@@ -51,12 +52,12 @@
         <div data-ct-ui-hide-drink>
           <p>
             <label><span class="ui--hidden">Recent</span>
-              <select data-ct-ui-stage-change="change" required>
+              <select data-ct-ui-stage-change="change" data-ct-data-item="this">
                 <option>--Select recent--</option>
-                <option>Espresso</option>
-                <option>Americano</option>
-                <option>Relentless</option>
-                <option>Green tea</option>
+                <option value="Espresso::100">Espresso</option>
+                <option value="Americano::100">Americano</option>
+                <option value="Relentless::160">Relentless</option>
+                <option value="Green tea::50">Green tea</option>
               </select>
             </label>
           </p>
@@ -66,8 +67,8 @@
       <div data-ct-ui-show-drink class="ui--removed">
         <p>Enter new item.</p>
       </div>
-      <div data-ct-ui-stage="3" class="ui--removed">
-        <p>Item recorded.</p>
+      <div data-ct-ui-stage="3" class="ui--removed" data-ct-ui-result="true">
+        <p data-ct-ui-result-text>Item recorded.</p>
         <input type="reset" data-ct-ui-restart value="Record another"/>
       </div>
     </form>
