Added Djnago and REST via venv.

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -82,6 +82,7 @@
           </fieldset>
         </div>
         <p data-ct-ui-new-item-mode="espresso"><label>Number of shots of espresso<input type="number"/></p>
+        <p><button type="button">Save</button></p>
       </div>
       <div data-ct-ui-stage="3" class="ui--removed" data-ct-ui-result="true">
         <p data-ct-ui-result-text>Item recorded.</p>
